# LTL

./: .gitignore  CMakeLists.txt  buchi.cpp  buchi.hpp  dynbitset.cpp  dynbitset.hpp  gba.cpp  gba.hpp  ltl.cpp  ltl.hpp  main.cpp  nnf.cpp  nnf.hpp  numbering.cpp  numbering.hpp  parse.cpp  parse.hpp  readme.txt  todolist.txt  ts.cpp  ts.hpp  util.hpp  verify.cpp  verify.hpp  vwaa.cpp  vwaa.hpp
test/: buchi.txt  final1.txt  final2.txt  final3.txt  final4.txt  gba.txt  parse.txt  ts.txt  vwaa.txt
